tests/compile-fail/integration__integration__count_jmps__gt_jmp_can_suggest_ne.snap
---
source: tests/integration/count_jmps.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:30:13
   │
30 │             if (--I2 > 0) goto label;
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^ decrement jump of this form not supported in this game
   │
   = this language supports a different form of decrement jump; try 'if (--I2)'


